generated/nixidy/prod/lidarr/HTTPRoute-lidarr.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: lidarr
  name: lidarr
  namespace: dotfiles
spec:
  hostnames:
    - lidarr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lidarr
          namespace: dotfiles
          port: 80
          weight: 1
